--- a/MOTPage.html
+++ b/MOTPage.html
@@ -23,7 +23,7 @@
       <li><a href="NewMOTTestPage.html">New Test...</a></li>
     </ul>
   </nav>
-
+ 
   <section>
     <article>
       <h2>Search for test:</h2>
@@ -92,7 +92,7 @@
     </div>
     </article>
   </section>
-
+  <div class="clear"></div>
   <footer>
     <p>&copy; 2024 DVSA. All rights reserved.</p>
   </footer>
