--- a/NewMOTTestPage.html
+++ b/NewMOTTestPage.html
@@ -59,18 +59,19 @@
                 <option value="FAIL">FAIL</option>
             </select>
             
-            <div style="float:right">
-                <label for="advisoryItems">Advisory Items:</label>
-                <textarea id="advisoryItems" name="advisoryItems" rows="2" cols="50"></textarea>
 
-                <label for="defects">Defects:</label>
-                <textarea id="defects" name="defects" rows="2" cols="50" ></textarea>
-            </div>
+            <label for="advisoryItems">Advisory Items:</label>
+            <textarea id="advisoryItems" name="advisoryItems" rows="2" cols="50"></textarea>
+
+            <label for="defects">Defects:</label>
+            <textarea id="defects" name="defects" rows="2" cols="50" ></textarea>
+            <br/>
             <button id="okButton" type="button" onclick="submitForm()">Submit</button>
 
         </form>
 
     </section>
+    <div class="clear"></div>
     <footer>
         <p>&copy; 2024 DVSA. All rights reserved.</p>
     </footer>
